# receipt_vault

./: .env.example  Dockerfile.dev  TODO  docker-compose.override.yml  docker-compose.yml  otel-collector.yaml  prometheus.yml  pyproject.toml
app/: dep.py  exceptions.py  instrumentation.py  main.py  model.py  routers.py  schemas.py
app/core/: broker.py  config.py  connection.py  logger.py
app/receipt/: models.py  repo.py  routes.py  schema.py  service.py
app/services/: file_handler.py
app/tasks/: actors.py
app/user/: models.py  repo.py  routes.py  schemas.py  service.py  user_client.py  utils.py
app/utils/: auth.py
scripts/: backend_pre_start.py  prestart.sh
