[project]
name = "receipt-vault"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16.2",
    "asgi-correlation-id>=4.3.4",
    "bcrypt>=4.3.0",
    "dramatiq[redis,watch]>=1.18.0",
    "fastapi[standard]>=0.115.14",
    "jwt>=1.4.0",
    "opentelemetry-api>=1.36.0",
    "opentelemetry-distro>=0.57b0",
    "opentelemetry-exporter-otlp>=1.36.0",
    "opentelemetry-instrumentation-asyncio>=0.57b0",
    "opentelemetry-instrumentation-fastapi>=0.57b0",
    "opentelemetry-instrumentation-httpx>=0.57b0",
    "opentelemetry-instrumentation-logging>=0.57b0",
    "opentelemetry-instrumentation-redis>=0.57b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.57b0",
    "opentelemetry-instrumentation-starlette>=0.57b0",
    "opentelemetry-instrumentation-threading>=0.57b0",
    "opentelemetry-sdk>=1.36.0",
    "passlib>=1.7.4",
    "psycopg2-binary>=2.9.10",
    "pydantic-settings>=2.10.1",
    "pydantic[standard]>=2.11.7",
    "pyjwt>=2.10.1",
    "python-magic>=0.4.27",
    "requests>=2.32.4",
    "slowapi>=0.1.9",
    "uvicorn[standard]>=0.35.0",
]
